--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Movie Playlist Manager</title>
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
-  <link rel="stylesheet" type="text/css" href="/css/app.css">
-</head>
-<body>
-  <div class="ui menu">
-    <div class="ui container">
-      <div class="header item">
-        Movies
+  <head>
+    <title>Movie Playlist Manager</title>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css"
+    />
+    <link rel="stylesheet" type="text/css" href="/css/app.css" />
+  </head>
+  <body>
+    <div class="ui menu">
+      <div class="ui container">
+        <div class="header item">
+          Movies
+        </div>
+        <a class="item" href="/movies">
+          Home
+        </a>
+        <a class="item" href="/movies/new">
+          Add
+        </a>
       </div>
-      <a class="item" href="/movies">
-        Home
-      </a>
-      <a class="item" href="/movies/new">
-        Add
-      </a>
     </div>
-  </div>
