--- a/views/new.ejs
+++ b/views/new.ejs
@@ -4,15 +4,17 @@
   <form class="ui form segment" action="/movies" method="POST">
     <div class="field">
       <label>Title</label>
-      <input type="text" name="movie[title]">
+      <input type="text" name="movie[title]" />
     </div>
     <div class="field">
       <label>Year</label>
-      <input type="text" name="movie[year]">
+      <input type="text" name="movie[year]" />
     </div>
     <div class="content">
-      <input class="ui button" type="submit">
+      <input class="ui button" type="submit" />
     </div>
   </form>
-<div>
-<%- include('partials/footer') -%>
+  <div>
+    <%- include('partials/footer') -%>
+  </div>
+</div>
