install connect-flash and express-session and added flash-messaging to existing routes

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -23,3 +23,12 @@
         </a>
       </div>
     </div>
+    <div class="ui container">
+      <% Object.keys(messages).forEach(function (type) { %>
+        <% messages[type].forEach(function (message) { %>
+          <div class= "ui <%= type %> message" role="alert">
+            <%= message %>
+          </div>
+        <% }) %>
+      <% }) %>
+    </div>
