removed body-parser, added express body pasing support, added search movie functionality and updated files

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -21,6 +21,9 @@
         <a class="item" href="/movies/new">
           Add
         </a>
+        <a class="item" href="/search">
+          Search
+        </a>
       </div>
     </div>
     <div class="ui container">
