item schema changed and propogated to other files, added seed_db file

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -14,7 +14,7 @@
       <label>Year</label>
       <input type="text" name="movie[year]" value="<%= item.movie.year %>" />
     </div>
-    <input type="hidden" name="listType" value="<%= item.listType %>" />
+    <input type="hidden" name="watchType" value="<%= item.watchType %>" />
     <div class="content">
       <input class="ui button" type="submit" />
     </div>
