updated app version and updated showResults

--- a/views/searchResults.ejs
+++ b/views/searchResults.ejs
@@ -28,9 +28,10 @@
               <div class="description">Created in <%= movie['Year']%></div>
             </div>
           </div>
-          <% }); %> <% } else{ %>
+          <% }); %> 
         </div>
       </div>
+      <% } else{ %>
       <h1>No Result Found</h1>
       <% } %>
     </div>
